Fix samples table with Horizontal scroll

--- a/src/components/HorizontalScroll.scss
+++ b/src/components/HorizontalScroll.scss
@@ -3,6 +3,11 @@
 
 .horizontal-scroll {
   position: relative;
+  height: 100%;
+
+  &__content {
+    height: 100%;
+  }
 
   &__left,
   &__right {
