--- a/src/containers/Experiment/SamplesTable.scss
+++ b/src/containers/Experiment/SamplesTable.scss
@@ -54,6 +54,10 @@
 
   .rt-tbody {
     min-height: 100px;
+
+    // momentum scrolling ios https://css-tricks.com/snippets/css/momentum-scrolling-on-ios-overflow-elements/
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
   }
 
   .rt-noData {
